AC_INIT(src/main.c)
PACKAGE=videosnarf
VERSION=0.6
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_CXX
AC_PROG_GCC_TRADITIONAL
AC_CONFIG_HEADERS([src/config.h])
dnl AM_PROG_CC_STDC
dnl AC_HEADER_STDC

AH_TEMPLATE(ARCH_X64,[compiling under 64bit])
AH_TEMPLATE(ARCH_X32,[compiling under 32bit])
AM_CONDITIONAL(ARCH_X64,false)
AM_CONDITIONAL(ARCH_X32,true)

case "$host_cpu" in 
*x86_64*)
	AC_DEFINE(ARCH_X64)
	AM_CONDITIONAL(ARCH_X64,true)
	AM_CONDITIONAL(ARCH_X32,false)
	;;
*ia64*)
	AC_DEFINE(ARCH_X64)
	AM_CONDITIONAL(ARCH_X64,true)
	AM_CONDITIONAL(ARCH_X32,false)
	;;
*)
	AC_DEFINE(ARCH_X32)
	;;
esac

AC_OUTPUT(Makefile src/Makefile)
